--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
     "        print(stimulus_choisi.statut)\n",
     "        self.mise_a_jour_lag_et_statut_et_reponse_du_sujet_a_un_stimulus(stimulus_choisi)\n",
     "\n",
-    "    def vrai_si_tous_vu_deux_fois(self)-> bool:\n",
+    "    def vrai_si_tous_vu_deux_fois(self)-> bool: # verifier que c'est bien pool_non_vu et pas l'autre\n",
     "        for stimulus in self.pool_non_vus:\n",
     "            if stimulus.statut in [\"vu\", \"non vu\"]:\n",
     "                # donc pas \"vu deux fois\"\n",
