virer test push

--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Version 1\n",
-    "test push"
+    "# Version 1"
    ]
   },
   {
