--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Stimulus:\n",
+    "class Stimulus: ###CACA\n",
     "    def __init__(self, numero: str) -> None:\n",
     "        self.numero = numero\n",
     "        self.statut: str = \"non vu\"\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
