--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Stimulus: ###CACA\n",
+    "class Stimulus: ###CACAA\n",
     "    def __init__(self, numero: str) -> None:\n",
     "        self.numero = numero\n",
     "        self.statut: str = \"non vu\"\n",
