--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -104,86 +104,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Je ne veux pas de version 4"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class Stimulus:\n",
-    "#     def __init__(self, numero: str) -> None:\n",
-    "#         self.numero = numero\n",
-    "#         self.statut: str = \"non vu\"\n",
-    "#         self.correct_responses = self.correct_response()\n",
-    "#         self.lag = 0\n",
-    "#     def correct_response(self)-> str:\n",
-    "#         if self.statut == \"non vu\":\n",
-    "#             self.correct_responses = \"N\"\n",
-    "#         else :\n",
-    "#             self.correct_responses = \"Y\"\n",
-    "#         return self.correct_responses\n",
+    "class Stimulus:\n",
+    "    def __init__(self, numero: str) -> None:\n",
+    "        self.numero = numero\n",
+    "        self.statut: str = \"non vu\"\n",
+    "        self.correct_responses = self.correct_response()\n",
+    "        self.lag = 0\n",
+    "    def correct_response(self)-> str:\n",
+    "        if self.statut == \"non vu\":\n",
+    "            self.correct_responses = \"N\"\n",
+    "        else :\n",
+    "            self.correct_responses = \"Y\"\n",
+    "        return self.correct_responses\n",
     "        \n",
     "\n",
-    "# class Experience:\n",
-    "#     def __init__(self, liste_stimuli : list[Stimulus], lag_initial:int) -> None:\n",
-    "#         self.pool_non_vus = liste_stimuli ###########\n",
-    "#         self.pool_vus : list[Stimulus] = []  ###########  \n",
-    "#         self.lag_initial = lag_initial\n",
+    "class Experience:\n",
+    "    def __init__(self, liste_stimuli : list[Stimulus], lag_initial:int) -> None:\n",
+    "        self.pool_non_vus = liste_stimuli ###########\n",
+    "        self.pool_vus : list[Stimulus] = []  ###########  \n",
+    "        self.lag_initial = lag_initial\n",
     "\n",
-    "#     def mise_a_jour_des_listes(self, stimulus : Stimulus)-> None: ################\n",
-    "#         if stimulus == \"vu\":\n",
-    "#             self.pool_non_vus.remove(stimulus)\n",
-    "#             self.pool_vus.append(stimulus)\n",
+    "    def mise_a_jour_des_listes(self, stimulus : Stimulus)-> None: ################\n",
+    "        if stimulus == \"vu\":\n",
+    "            self.pool_non_vus.remove(stimulus)\n",
+    "            self.pool_vus.append(stimulus)\n",
     "\n",
-    "#     def le_sujet_repond(self)->str:\n",
-    "#         return(input(\"Avez vous déjà vu ce visage ?\"))        \n",
+    "    def le_sujet_repond(self)->str:\n",
+    "        return(input(\"Avez vous déjà vu ce visage ?\"))        \n",
     "\n",
-    "#     def mise_a_jour_lag_et_statut_et_reponse_du_sujet_a_un_stimulus(self, stimulus: Stimulus)-> None:\n",
-    "#         reponse_du_sujet:str = self.le_sujet_repond()\n",
-    "#         if reponse_du_sujet == stimulus.correct_response():\n",
-    "#             self.lag_initial += 1\n",
-    "#             print(reponse_du_sujet, stimulus.correct_response())########\n",
-    "#         else : \n",
-    "#             self.lag_initial -= 1\n",
-    "#             print(reponse_du_sujet, stimulus.correct_response())##########\n",
-    "#         self.mise_a_jour_statut_pour_un_stimulus(stimulus)\n",
+    "    def mise_a_jour_lag_et_statut_et_reponse_du_sujet_a_un_stimulus(self, stimulus: Stimulus)-> None:\n",
+    "        reponse_du_sujet:str = self.le_sujet_repond()\n",
+    "        if reponse_du_sujet == stimulus.correct_response():\n",
+    "            self.lag_initial += 1\n",
+    "            print(reponse_du_sujet, stimulus.correct_response())########\n",
+    "        else : \n",
+    "            self.lag_initial -= 1\n",
+    "            print(reponse_du_sujet, stimulus.correct_response())##########\n",
+    "        self.mise_a_jour_statut_pour_un_stimulus(stimulus)\n",
     "    \n",
-    "#     def mise_a_jour_statut_pour_un_stimulus(self, stimulus:Stimulus)->None:\n",
-    "#         if stimulus.statut == \"vu\":\n",
-    "#             stimulus.statut = \"vu deux fois\"\n",
-    "#         elif stimulus.statut == \"non vu\":\n",
-    "#             stimulus.statut = \"vu\"\n",
+    "    def mise_a_jour_statut_pour_un_stimulus(self, stimulus:Stimulus)->None:\n",
+    "        if stimulus.statut == \"vu\":\n",
+    "            stimulus.statut = \"vu deux fois\"\n",
+    "        elif stimulus.statut == \"non vu\":\n",
+    "            stimulus.statut = \"vu\"\n",
     "    \n",
-    "#     def prochain_stimulus(self)->Stimulus:\n",
-    "#         for stimulus in self.pool_non_vus:\n",
-    "#             if stimulus.statut == \"vu\" and stimulus.lag == 0:\n",
-    "#                 return stimulus\n",
-    "#             elif stimulus.statut == \"non vu\":\n",
-    "#                 return stimulus\n",
+    "    def prochain_stimulus(self)->Stimulus:\n",
+    "        for stimulus in self.pool_non_vus:\n",
+    "            if stimulus.statut == \"vu\" and stimulus.lag == 0:\n",
+    "                return stimulus\n",
+    "            elif stimulus.statut == \"non vu\":\n",
+    "                return stimulus\n",
     "            \n",
-    "#     def deroulement_un_tour(self)-> None:\n",
-    "#         stimulus_choisi = self.prochain_stimulus()\n",
-    "#         print(stimulus_choisi.numero)\n",
-    "#         print(stimulus_choisi.statut)\n",
-    "#         self.mise_a_jour_lag_et_statut_et_reponse_du_sujet_a_un_stimulus(stimulus_choisi)\n",
+    "    def deroulement_un_tour(self)-> None:\n",
+    "        stimulus_choisi = self.prochain_stimulus()\n",
+    "        print(stimulus_choisi.numero)\n",
+    "        print(stimulus_choisi.statut)\n",
+    "        self.mise_a_jour_lag_et_statut_et_reponse_du_sujet_a_un_stimulus(stimulus_choisi)\n",
     "\n",
-    "#     def vrai_si_tous_vu_deux_fois(self)-> bool: # verifier que c'est bien pool_non_vu et pas l'autre\n",
-    "#         for stimulus in self.pool_non_vus:\n",
-    "#             if stimulus.statut in [\"vu\", \"non vu\"]:\n",
-    "#                 # donc pas \"vu deux fois\"\n",
-    "#                 return False\n",
-    "#         return True\n",
+    "    def vrai_si_tous_vu_deux_fois(self)-> bool: # verifier que c'est bien pool_non_vu et pas l'autre\n",
+    "        for stimulus in self.pool_non_vus:\n",
+    "            if stimulus.statut in [\"vu\", \"non vu\"]:\n",
+    "                # donc pas \"vu deux fois\"\n",
+    "                return False\n",
+    "        return True\n",
     "    \n",
-    "#     def deroulement_expe(self):\n",
-    "#         while self.vrai_si_tous_vu_deux_fois() is False:\n",
-    "#             self.deroulement_un_tour()"
+    "    def deroulement_expe(self):\n",
+    "        while self.vrai_si_tous_vu_deux_fois() is False:\n",
+    "            self.deroulement_un_tour()"
    ]
   }
  ],
