--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,11 +153,14 @@
     "            stimulus.statut = \"vu\"\n",
     "    \n",
     "    def prochain_stimulus(self)->Stimulus:\n",
-    "        for stimulus in self.pool_non_vus:\n",
-    "            if stimulus.statut == \"vu\" and stimulus.lag == 0:\n",
+    "        for stimulus in self.pool_vus:\n",
+    "            if stimulus.lag == 0:\n",
     "                return stimulus\n",
-    "            elif stimulus.statut == \"non vu\":\n",
-    "                return stimulus\n",
+    "        stimulus = self.pool_non_vus[0]\n",
+    "        self.pool_vus.append(stimulus)\n",
+    "        self.pool_non_vus.pop(0)\n",
+    "        return stimulus\n",
+    "        \n",
     "            \n",
     "    def deroulement_un_tour(self)-> None:\n",
     "        stimulus_choisi = self.prochain_stimulus()\n",
@@ -165,7 +168,7 @@
     "        print(stimulus_choisi.statut)\n",
     "        self.mise_a_jour_lag_et_statut_et_reponse_du_sujet_a_un_stimulus(stimulus_choisi)\n",
     "\n",
-    "    def vrai_si_tous_vu_deux_fois(self)-> bool: # verifier que c'est bien pool_non_vu et pas l'autre\n",
+    "    def vrai_si_tous_vu_deux_fois(self)-> bool:\n",
     "        for stimulus in self.pool_non_vus:\n",
     "            if stimulus.statut in [\"vu\", \"non vu\"]:\n",
     "                # donc pas \"vu deux fois\"\n",
@@ -176,6 +179,13 @@
     "        while self.vrai_si_tous_vu_deux_fois() is False:\n",
     "            self.deroulement_un_tour()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
