derniers outils de CI, résolution des erreurs. nb nouveau cassé

--- a/nouveau.ipynb
+++ b/nouveau.ipynb
@@ -75,10 +75,8 @@
     "\n",
     "    def prochain_stimulus(self) -> Stimulus:\n",
     "        for stimulus in self.pool_non_vus:\n",
-    "            if stimulus.statut == \"vu\" and stimulus.lag == 0:\n",
-    "                return stimulus\n",
-    "            elif stimulus.statut == \"non vu\":\n",
-    "                return stimulus\n",
+    "            return stimulus  # old logic\n",
+    "        return stimulus  # old logic\n",
     "\n",
     "    def deroulement_un_tour(self) -> None:\n",
     "        stimulus_choisi = self.prochain_stimulus()\n",
@@ -97,7 +95,7 @@
     "                return False\n",
     "        return True\n",
     "\n",
-    "    def deroulement_expe(self):\n",
+    "    def deroulement_expe(self) -> None:\n",
     "        while self.vrai_si_tous_vu_deux_fois() is False:\n",
     "            self.deroulement_un_tour()"
    ]
